--- a/app/src/main/assets/www/credits.html
+++ b/app/src/main/assets/www/credits.html
@@ -7,3 +7,5 @@ zgrac tile mapy w jakosci retina do aplikacji
 zmodyfikowac kod zrodlowy leafleta zeby X byl wiekszy
 
 https://cartodb.com/location-data-services/basemaps/
+
+handle ajax error to user
